--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,12 @@
     ],
     "require": {
         "php": "^8.0"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Elfcms\\Basic\\ElfBasicProvider"
+            ]
+        }
     }
 }
