--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Elfcms\\Basic\\ElfBasicProvider"
+                "Elfcms\\Basic\\Providers\\ElfBasicProvider"
             ]
         }
     }
